preliminary english version

--- a/jollix/public_html/en/en_about.html
+++ b/jollix/public_html/en/en_about.html
@@ -13,61 +13,63 @@
 	<table bgcolor="#DBF4FF" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
 				<table border="0" width="100%">
 					<tr>
-						<td align="left"><a href="de_news.html"><img src="../img/news.jpg" border=0></a></td>
-						<td align="left"><a href="de_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
-						<td align="left"><a href="de_download.html"><img src="../img/download.jpg" border=0></a></td>
-						<td align="left"><a href="de_features.html"><img src="../img/features.jpg" border=0></a></td>
+						<td align="left"><a href="en_news.html"><img src="../img/news.jpg" border=0></a></td>
+						<td align="left"><a href="en_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
+						<td align="left"><a href="en_download.html"><img src="../img/download.jpg" border=0></a></td>
+						<td align="left"><a href="en_features.html"><img src="../img/features.jpg" border=0></a></td>
 					</tr>
 					<tr>
 						<td align="right"></td>
-						<td align="right"><a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
+						<td align="right"><a href="en_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
 						<td align="right"><a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a></td>
-						<td align="right"><a href="de_about.html"><img src="../img/about.jpg" border=0></a></td>
+						<td align="right"><a href="en_about.html"><img src="../img/about.jpg" border=0></a></td>
 	  			</tr>
 				</table>
 			</td>
 			<td width="20"></td>
 			<td width="100" valign="center" align="center"><h4>ABOUT</h4><br>
-				<a href="../en/en_home.html"><img src="../img/english.gif" border="0"><br>English Version</a>
+				<a href="../de/de_home.html"><img src="../img/deutsch.gif" border="0"><br>Deutsche Version</a>
 			</td>
 			<td width="20"></td>
 		</tr>
 	</table>
 	<hr>
-	<h4>Was ist jollix?</h4>
-	Jollix ist eine LiveCD, die auf <a href="dokumentation.html#gentoo">Gentoo Linux</a>
-	basiert. jollix bootet direkt von CD, ohne die Festplatte zu verändern.
-	Die Möglichkeit, jollix einfach und schnell auf der Festplatte zu installieren, wird es in einer der späteren Versionen geben. Eine Festplatteninstallation von jollix kann über die Portage Paketverwaltung von Gentoo dann beliebig erweitert und upgedatet werden.<br>
-	Mit Jollix soll hauptsächlich der Gamer und Multimedia-Enthusiast
-	angesprochen werden, der Linux als stabile und sichere Plattform bevorzugt.<br>
-	Also <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target=parent>iso Image</a> herunterladen, auf eine CD brennen und den PC damit booten!
+	<h4>What is jollix?</h4>
+	Jollix ia a LiveCD based on <a href="dokumentation.html#gentoo">Gentoo Linux</a>
+	Jollix boots directly from a CD without touching the hard disk.
+	A fast and easy-to-install version of jollix will be available in a later release.
+	In the current version there are installation instructions for more experienced linux users.
+	Once jollix is installed on a hard disk, it can be updated via portage, the packet
+	manager of Gentoo linux. In fact, jollix IS gentoo at this point (somehow preconfigured).<br>
+	Jollix aimes at the gamer and multimedia-enthusiast, who prefers Linux as a stable and safe
+	platform.<br>
 	<br><br>
-	Neben der Desktop-Umgebung <a href="de_docu.html#kde">KDE</a>
-	inkl. vieler nützlicher Programme (v.a. Internet- und Multimedia-Anwendungen)
-	ist auch <a href="de_docu.html#wine">Wine</a> enthalten.
-	Wine ist ein Programmpaket, mit dem auch einige MS-Windows Programme
-	unter Linux laufen. Dadurch sind insbesondere Spiele wie
-	Counter-Strike unter Linux lauffähig,
-	für die es (noch) keine eigene Linux-Version gibt
-	(und vielleicht auch nie geben wird).<br>
-	Sollte nach einer Festplatteninstallation der Funktionsumfang nicht mehr ausreichen,
-	kann das System einfach erweitert werden. D.h. zusätzliche Programmpakete
-	können - wie mit Gentoo Linux - installiert und auch wieder deinstalliert
-	werden. Dafür wird die von den Gentoo entwickelte Paketverwaltung <a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
-	gleich mit installiert. Eine einfache grafische und benutzergeführte Installtion ist derzeit
-	noch nicht möglich. Erfahrenere Leute können jedoch jetzt schon jollix auf der Festplatte installieren, dazu gibt es in der Dokumentation eine <a href="de_docu.html#installation">Anleitung</a>.
+	Included in the distribution is the desktop environment KDE with many useful
+	applications (mostly internet and multimedia).<br>
+	Also part of jollix is wine, a  program which allows the operation of DOS and MS Windows
+	programs (Windows 3.x and Win32 executables) on Linux.
+	Especially games like Counter-Strike (in general: "Half-Life-based") are playable
+	under Linux with wine.<br>
+	If you successfully installed jollix and want more features/applications,
+	you can do this by simply using the gentoo packet managing tool
+	<a href="http://www.gentoo.org/doc/de/portage-user.xml" target="_blank">portage</a> to
+	install new/upgrade applications. Deinstallation packets is - of course - possible too.
+	A simple graphical installation is currently not possible (but planned).
+	Experienced Users can try to install jollix on their hard disk following
+	<a href="../en/en_docu.html#installation">this instructions</a> (german only so far!
+	we will translate to english ASAP).
 
-	<h4>Was ist jollix nicht?</h4>
-	Jollix hat nichts mit
+	<h4>Was is jollix NOT?</h4>
+	Jollix has nothing to do with
 	<a href="http://jargon.watson-net.com/jargon.asp?prn=1&w=jolix">jolix</a>,
-	dem Freeware Port des BSD Net/2 Systems auf die Intel i386 Architektur von
-	Bill und Lynne Greer Jolitz zu tun. ;-)
+	the freeware Port of the BSD Net/2 system to the Intel i386 architecture by
+	Bill and Lynne Greer Jolitz. ;-)
 	<h4>Vielen Dank an / Many thanks to</h4>
 	The BerliOS Team & the makers of Gentoo Linux.
 </div>
