--- a/jollix/public_html/en/en_docu.html
+++ b/jollix/public_html/en/en_docu.html
@@ -13,28 +13,28 @@
 	<table bgcolor="#DBF4FF" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
 				<table border="0" width="100%">
 					<tr>
-						<td align="left"><a href="de_news.html"><img src="../img/news.jpg" border=0></a></td>
-						<td align="left"><a href="de_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
-						<td align="left"><a href="de_download.html"><img src="../img/download.jpg" border=0></a></td>
-						<td align="left"><a href="de_features.html"><img src="../img/features.jpg" border=0></a></td>
+						<td align="left"><a href="en_news.html"><img src="../img/news.jpg" border=0></a></td>
+						<td align="left"><a href="en_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
+						<td align="left"><a href="en_download.html"><img src="../img/download.jpg" border=0></a></td>
+						<td align="left"><a href="en_features.html"><img src="../img/features.jpg" border=0></a></td>
 					</tr>
 					<tr>
 						<td align="right"></td>
-						<td align="right"><a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
+						<td align="right"><a href="en_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
 						<td align="right"><a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a></td>
-						<td align="right"><a href="de_about.html"><img src="../img/about.jpg" border=0></a></td>
+						<td align="right"><a href="en_about.html"><img src="../img/about.jpg" border=0></a></td>
 	  			</tr>
 				</table>
 			</td>
 			<td width="20"></td>
 			<td width="100" valign="center" align="center"><h4>DOCU</h4><br>
-				<a href="../en/en_home.html"><img src="../img/english.gif" border="0"><br>English Version</a>
+				<a href="../de/de_home.html"><img src="../img/deutsch.gif" border="0"><br>Deutsche Version</a>
 			</td>
 			<td width="20"></td>
 		</tr>
@@ -43,12 +43,14 @@
 	<table>
 	<tr>
 		<td valign="top">
-			<a href="#readme01">Readme.txt der Version 0.2</a><br>
+			<a href="#readme01">Readme.txt from version 0.2</a><br>
 			<a href="#faq">FAQ</a><br>
-			<a href="#ausprobieren">Jollix ausprobieren <b>ohne</b> Installation</a><br>
-			<a href="#installation">Jollix installieren</a><br>
+			<a href="#ausprobieren">Trying jollix out <b>without</b> installation</a><br>
+			<a href="#installation">Installation instructions</a><br>
 			<hr>
-			<a name="readme01">Readme.txt der Version 0.2:</a>
+			<h2>English documentation is work in progress. Sorry. Translation is so tedouis ...</h2>
+			<hr>
+			<a name="readme01">Readme.txt from version 0.2:</a>
 			<pre>
 jollix 0.2 ---- Erste Schritte ---- http://www.jollix.de ---- 0.2 Release
 
