--- a/jollix/public_html/en/en_download.html
+++ b/jollix/public_html/en/en_download.html
@@ -13,28 +13,28 @@
 	<table bgcolor="#DBF4FF" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
 				<table border="0" width="100%">
 					<tr>
-						<td align="left"><a href="de_news.html"><img src="../img/news.jpg" border=0></a></td>
-						<td align="left"><a href="de_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
-						<td align="left"><a href="de_download.html"><img src="../img/download.jpg" border=0></a></td>
-						<td align="left"><a href="de_features.html"><img src="../img/features.jpg" border=0></a></td>
+						<td align="left"><a href="en_news.html"><img src="../img/news.jpg" border=0></a></td>
+						<td align="left"><a href="en_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
+						<td align="left"><a href="en_download.html"><img src="../img/download.jpg" border=0></a></td>
+						<td align="left"><a href="en_features.html"><img src="../img/features.jpg" border=0></a></td>
 					</tr>
 					<tr>
 						<td align="right"></td>
-						<td align="right"><a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
+						<td align="right"><a href="en_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
 						<td align="right"><a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a></td>
-						<td align="right"><a href="de_about.html"><img src="../img/about.jpg" border=0></a></td>
+						<td align="right"><a href="en_about.html"><img src="../img/about.jpg" border=0></a></td>
 	  			</tr>
 				</table>
 			</td>
 			<td width="20"></td>
 			<td width="100" valign="center" align="center"><h4>DOWNLOAD</h4><br>
-				<a href="../en/en_home.html"><img src="../img/english.gif" border="0"><br>English Version</a>
+				<a href="../de/de_home.html"><img src="../img/deutsch.gif" border="0"><br>Deutsche Version</a>
 			</td>
 			<td width="20"></td>
 		</tr>
@@ -43,9 +43,14 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
-				<b>Download Mirrors:</b><br>
+				<b>Latest version:</b><br>
 				<ul>
+					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a>
+					[22.10.2003] ~500MB (berlios.de)</li>
+				</ul>
+				<b>Download Mirrors:</b><br>
+				temporarily not available<br><br>
+				<!--<ul>
 					<li>Germany:<br>
 					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
@@ -56,23 +61,16 @@
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
-				</ul>
-				<b>Changelog:</b><br>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-				<hr align="middle" width="50%"><br>
-				<b>Frühere Versionen</b>:<br>
+				</ul> -->
+				<hr><br>
+				<b>Older versions</b>:<br>
 				<ul>
 					<li>jollix 0.1.1 [30.04.2003]<br>
-						Zweite verbesserte Release, CS/PE - Edition<br>
-						Downloads der [0.1.1] bis 22.10.2003: 7874 </li>
+						Second improved release, CS/PE - Edition<br>
+						Downloads of [0.1.1] until 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
-						Erste Release, CS - Edition<br>
-						Downloads der [0.1] bis 30.04.2003: 429 </li>
+						First release, CS - Edition<br>
+						Downloads of [0.1] until 30.04.2003: 429 </li>
 				</ul>
 		 	</td>
 		</tr>
