--- a/jollix/public_html/en/en_features.html
+++ b/jollix/public_html/en/en_features.html
@@ -13,28 +13,28 @@
 	<table bgcolor="#DBF4FF" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
 				<table border="0" width="100%">
 					<tr>
-						<td align="left"><a href="de_news.html"><img src="../img/news.jpg" border=0></a></td>
-						<td align="left"><a href="de_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
-						<td align="left"><a href="de_download.html"><img src="../img/download.jpg" border=0></a></td>
-						<td align="left"><a href="de_features.html"><img src="../img/features.jpg" border=0></a></td>
+						<td align="left"><a href="en_news.html"><img src="../img/news.jpg" border=0></a></td>
+						<td align="left"><a href="en_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
+						<td align="left"><a href="en_download.html"><img src="../img/download.jpg" border=0></a></td>
+						<td align="left"><a href="en_features.html"><img src="../img/features.jpg" border=0></a></td>
 					</tr>
 					<tr>
 						<td align="right"></td>
-						<td align="right"><a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
+						<td align="right"><a href="en_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
 						<td align="right"><a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a></td>
-						<td align="right"><a href="de_about.html"><img src="../img/about.jpg" border=0></a></td>
+						<td align="right"><a href="en_about.html"><img src="../img/about.jpg" border=0></a></td>
 	  			</tr>
 				</table>
 			</td>
 			<td width="20"></td>
 			<td width="100" valign="center" align="center"><h4>FEATURES</h4><br>
-				<a href="../en/en_home.html"><img src="../img/english.gif" border="0"><br>English Version</a>
+				<a href="../de/de_home.html"><img src="../img/deutsch.gif" border="0"><br>Deutsche Version</a>
 			</td>
 			<td width="20"></td>
 		</tr>
@@ -45,42 +45,38 @@
 			<td valign="top">
 				<h4>Jollix 0.2 Features:</h4>
 				<ul>
-					<li>basiert auf <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a></li>
-  				<li>zum Ausprobieren ist keine Installation auf der Festplatte notwendig</li>
-					<li>Optimiert für i686 Architektur</li>
-  				<li>unterstützt nVidia und ATI-basierte Grafikkarten mit voller 3D Beschleunigung, alle anderen Grafikkarten mit Vesa Modus</li>
+					<li>based on <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a></li>
+  				<li>no hard disk installation necessary (LiveCD)</li>
+					<li>optimized for i686 architecture</li>
+  				<li>supports nVidia und ATI-based graphics cards with full 3D acceleration, other graphics cards use Vesa mode</li>
 					<li>Kernel: Gentoo 2.4.20-gaming-sources</li>
   				<li>KDE 3.1.4</li>
-					<li>Viele Multimedia Anwendungen (xmms, mplayer, xine u.a.)</li>
-					<li>ISDN-Unterstützung</li>
+					<li>Many multimedia applications (xmms, mplayer, xine u.a.)</li>
+					<li>ISDN-support</li>
 					<li>Fritz!Card DSL</li>
 					<li>Wine Build 20030911</li>
-					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, ein Game-Server Browser</li>
-					<li>Cheathing Death Unterstützung </li>
-					<li>Half-Life-, Public-Enemy- oder Counter-Strike Festplatteninstallation können direkt mit der LiveCD gespielt werden! </li>
-					<li>Viele Bugfixes + aktuelle Versionen der installierten Software</li>
-					<li>Installationsanleitung für erfahrene Linux User</li><br>
-					<li><a href="../common/packets.html" target="_blank">Paketliste (in neuem Fenster)</a></li>
+					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, ein game-server browser</li>
+					<li>Cheathing Death</li>
+					<li>Half-Life-, Public-Enemy- or Counter-Strike hard disk installations can
+						be used directly from the LiveCD!</li>
+					<li>Many bugfixes + current versions of installed software</li>
+					<li>Installation instructions for experienced linux users</li><br>
+					<li><a href="../common/packets.html" target="_blank">list of packets (in new window)</a></li>
 				</ul>
-				<h4>Known Bugs / Bekannte Fehler der 0.2:</h4>
+				<h4>Known Bugs in 0.2:</h4>
 				<ul>
-					<li>???</li>
+					<li>??? (need your feedback)</li>
 				</ul>
-				<h4>Geplante &Auml;nderungen und 	Features für die nächste Version:</h4>
+				<h4>Planned changes and features for the next versions:</h4>
 				<ul>
-					<li>Eine <a href="http://www.cs.uni-sb.de/NMM" target="_parent">NMM</a> Version,
-						die die <a href="http://www.cs.uni-sb.de/NMMStatus/MMBox/index.html" target="_parent">MMBox</a>
-						startet: Verwandelt den PC in ein Netzwerk-taugliches Multimedia Home-Entertainment Center!</li>
-					<li>...</li>
-				</ul>
-				<h4>Was jollix irgendwann mal k&ouml;nnen soll:</h4>
-				<ul>
-					<li>schnelle und einfache grafische Installation</li>
+					<li>An <a href="http://www.cs.uni-sb.de/NMM" target="_parent">NMM</a>-version,
+						that starts the <a href="http://www.cs.uni-sb.de/NMMStatus/MMBox/index.html" target="_parent">MMBox-application</a>:
+						Turns your PC into a network-enabled Multimedia Home-Entertainment Center!</li>
+					<li>fast and easy graphical installation</li>
 					</ul>
-				<h4>Was soll jollix können?</h4>
-				Im <a href="http://jollix.berlios.de/phpBB2/index.php">Forum</a> könnt ihr Vorschläge machen, was jollix in zukünftigen
-				Versionen alles mitbringen soll. Z.B. ein bestimmtes Programm, Unterstützung für ein
-				bestimmtes Spiel, Half-Life Mod usw.
+				<h4>Wishlist</h4>
+				In our forum you can make feature requests. Discuss the features, programs, or games jollix
+				should support/comprise.
 			</td>
 		</tr>
 	</table>
