--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -13,82 +13,66 @@
 	<table bgcolor="#DBF4FF" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
 				<table border="0" width="100%">
 					<tr>
-						<td align="left"><a href="de_news.html"><img src="../img/news.jpg" border=0></a></td>
-						<td align="left"><a href="de_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
-						<td align="left"><a href="de_download.html"><img src="../img/download.jpg" border=0></a></td>
-						<td align="left"><a href="de_features.html"><img src="../img/features.jpg" border=0></a></td>
+						<td align="left"><a href="en_news.html"><img src="../img/news.jpg" border=0></a></td>
+						<td align="left"><a href="en_docu.html"><img src="../img/dokumentation.jpg" border=0></a></td>
+						<td align="left"><a href="en_download.html"><img src="../img/download.jpg" border=0></a></td>
+						<td align="left"><a href="en_features.html"><img src="../img/features.jpg" border=0></a></td>
 					</tr>
 					<tr>
 						<td align="right"></td>
-						<td align="right"><a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
+						<td align="right"><a href="en_screenshots.html"><img src="../img/screenshots.jpg" border=0></a></td>
 						<td align="right"><a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a></td>
-						<td align="right"><a href="de_about.html"><img src="../img/about.jpg" border=0></a></td>
+						<td align="right"><a href="en_about.html"><img src="../img/about.jpg" border=0></a></td>
 	  			</tr>
 				</table>
 			</td>
 			<td width="20"></td>
 			<td width="100" valign="center" align="center"><h4>HOME</h4><br>
-				<a href="../en/en_home.html"><img src="../img/english.gif" border="0"><br>English Version</a>
+				<a href="../de/de_home.html"><img src="../img/deutsch.gif" border="0"><br>Deutsche Version</a>
 			</td>
 			<td width="20"></td>
 		</tr>
 	</table>
 	<hr>
-	<p>Jollix ist eine freie GNU/Linux Distribution, die direkt von CD läuft (LiveCD).
-		Jollix ist ein speziell für Spiele und Multimedia vorkonfiguriertes
-		<a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a>,
-		das automatisch gängige PC-Hardware erkennen und konfigurieren kann. Die LiveCD
-		startet automatisch eine grafische Oberfläche (XFree und KDE), so dass direkt
-		alle wichtigen Anwendungen benutzt
-		werden können. Mehr Informationen gibt es <a href="de_about.html">hier</a>.
+	<p>Jollix is a free GNU/Linux distribution. It's a bootable CD (LiveCD).
+		Jollix is designed for games and multimedia purposes; it's basis is
+		the famous <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a>,
+		that is capable of automatic hardware detection an configuration. The LiveCD
+		starts a graphical user interface (XFree + KDE), so the most important and useful
+		applications are available after startup. More information about jollix is
+		<a href="en_about.html">available here</a>.
 	</p>
 	<hr>
 	<table border="0" width="100%">
 		<tr>
 			<td valign="top">
-				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
-				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergeladen werden:<br>
-				<br><br>
-				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
-				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
-				registrierten Beta-Tester bei Berlios zum Download bereit stehen. Nach einer anvisierten
-				2-wöchigen Testphase soll dann die allgemeine Veröffentlichung von jollix 0.2 folgen.<br>
-				Die wichtigsten Neuerungen sind:
-				<ul>
-					<li>ATI Grafikkarten 3D-Support</li>
-					<li>AVM FritzCardDSL</li>
-					<li>ISDN (capi4linux)</li>
-					<li>Digital Kamera Hotplug</li>
-					<li>XQF Gamebrowser</li>
-					<li>TV Karten Unterstützung</li>
-				</ul>
-				Weitere Einzelheiten sowie bekannte Fehler, workarounds + hacks werden im Forum und hier
-				in den nächsten Tagen bekannt gegeben. Happy Testing ;-)<br><br>
-				<b><i>06.08.03</i></b> - <b><a href="http://www.gentoo.org" target="_blank">Gentoo 1.4
-				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
-				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
-				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
-				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
-				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
-				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
-				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
-				usw.) etabliert. Enthalten im <a href="http://sourceforge.net/projects/nmm/">CVS Archiv</a>
-				ist u.a. die <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html">
-				Multimedia-Box</a>, eine NMM-Anwendung, die ein erweiterbares Home Entertainment
-				System bereit stellt (ähnlich wie <a href="http://freevo.sourceforge.net/">freevo</a> z.B.).
-				In der Zusammenarbeit mit dem NMM-Team ist geplant, für die Multimedia-Box eine eigene
-				Jollix Version zu schaffen, so dass dann die Mutimedia-Box direkt von der bootfähigen
-				CD-ROM gestartet werden kann.
+				<font size="+1"><b>News & Announcements:<b></font><br><br>
+				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
+				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">Download here.</a><br>
+				Version 0.2 is the second beta-release of jollix. The most important enhancements
+				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
+				Many internet and multimedia applications are part of the software collection, e.g.
+				Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
+				kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
+				(TV-application). A detailed overview is
+				<a href="http://www.jollix.de/common/packets.html">available here</a>.
+				Experienced GNU/linux users might try to install jollix on their hard disk.
+				But the installation instructions are in german only so far. This will change soon.
+				We plan to develop a grafical installation program for a later version.
+				Jollix ist optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
+				from gentoo linux. NVIDIA (TNT- Geforce 5900 FX) and ATI Radeon graphics cards
+				(8500-9800) are supported with full OpenGL 3D acceleration. the size of the ISO-image of
+				the jollix LiveCD is 506MB.
 				<br><br>
 			</td>
 			<td bgcolor="#DBF4FF" width="200" valign="top" align="center">
-				<br><a href="de_screenshots.html"><img src="../img/sc2.jpg" border="0"></a><br><br>
+				<br><a href="en_screenshots.html"><img src="../img/sc2.jpg" border="0"></a><br><br>
 				<b>Kontakt:</b><br>
 				Oliver Schwinn<br>patteh[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3719">leave a message</a><br><br>
 				Jochen Spang<br>knochen[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3712">leave a message</a><br><br><a href="irc://irc.quakenet.org/jollix" target="_blank">irc://irc.quakenet.org/jollix</a>
