--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -43,69 +43,58 @@
 	<table>
 		<tr>
 			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
-				<b><i>19.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergeladen werden:<br>
+				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
+				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">Download here.</a><br>
+				Version 0.2 is the second beta-release of jollix. The most important enhancements
+				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
+				Many internet and multimedia applications are part of the software collection, e.g.
+				Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
+				kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
+				(TV-application). A detailed overview is
+				<a href="http://www.jollix.de/common/packets.html">available here</a>.
+				Experienced GNU/linux users might try to install jollix on their hard disk.
+				But the installation instructions are in german only so far. This will change soon.
+				We plan to develop a grafical installation program for a later version.
+				Jollix ist optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
+				from gentoo linux. NVIDIA (TNT- Geforce 5900 FX) and ATI Radeon graphics cards
+				(8500-9800) are supported with full OpenGL 3D acceleration. the size of the ISO-image of
+				the jollix LiveCD is 506MB.
 				<br><br>
-				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
-				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
-				registrierten Beta-Tester bei Berlios zum Download bereit stehen. Nach einer anvisierten
-				2-wöchigen Testphase soll dann die allgemeine Veröffentlichung von jollix 0.2 folgen.<br>
-				Die wichtigsten Neuerungen sind:
-				<ul>
-					<li>ATI Grafikkarten 3D-Support (hackattack!!)</li>
-					<li>AVM FritzCardDSL</li>
-					<li>ISDN (capi4linux)</li>
-					<li>Digital Kamera Hotplug</li>
-					<li>XQF Gamebrowser</li>
-					<li>TV Karten Unterstützung</li>
-				</ul>
-				Weitere Einzelheiten sowie bekannte Fehler, workarounds + hacks werden im Forum und hier
-				in den nächsten Tagen bekannt gegeben. Happy Testing ;-)<br><br>
-				<b><i>06.08.03</i></b> - <b><a href="http://www.gentoo.org" target="_blank">Gentoo 1.4
-				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
-				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
-				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
-				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
-				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
-				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
-				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
-				usw.) etabliert. Enthalten im <a href="http://sourceforge.net/projects/nmm/">CVS Archiv</a>
-				ist u.a. die <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html">
-				Multimedia-Box</a>, eine NMM-Anwendung, die ein erweiterbares Home Entertainment
-				System bereit stellt (ähnlich wie <a href="http://freevo.sourceforge.net/">freevo</a> z.B.).
-				In der Zusammenarbeit mit dem NMM-Team ist geplant, für die Multimedia-Box eine eigene
-				Jollix Version zu schaffen, so dass dann die Mutimedia-Box direkt von der bootfähigen
-				CD-ROM gestartet werden kann.
-				<br><br>
-				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Treiber
-				von ATI sind sehr vielversprechend; In Kürze wird auch ISDN funktionieren; In der kommenden
-				Version 0.2 ist das aktuelle KDE 3.1.2 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
-				wird ebenfalls entwickelt. Ihr dürft gespannt sein ;-)<br><br>
-				<b><i>06.05.03</i></b> - Zwei Mailinglisten sind eingerichtet worden: <b>jollix-user</b>
-				ist &ouml;ffentlich und dient dem Austausch der jollix-user untereinander.
-				Um die jollix-user Liste zu abonnieren,
-				<a href="https://lists.berlios.de/mailman/listinfo/jollix-user">hier klicken</a>.<br>
-				<b>jollix-developer</b> ist die private Gruppe der jollix Entwickler,
-				in der die Weiterentwicklung von jollix diskutiert wird.
-				Um die <a href="https://lists.berlios.de/mailman/listinfo/jollix-developer">jollix-developer</a>
-				Liste zu abonnieren, sollte man am besten einen Account bei
+				<b><i>06.08.03</i></b> - <b>Gentoo 1.4 released.</b><br> Today Gentoo Linux 1.4 was released
+				as a LiveCD. Work on jollix is going to be finished soon.<br>
+				"The Network-Integrated Multimedia Middleware (NMM) provides an architecture that allows
+				to create distributed multimedia application easily: local and remote multimedia devices
+				or software components can be controlled transparently and integrated into a common
+				multimedia processing flow graph. NMM runs under Linux, is implemented in C++,
+				and distributed under the LGPL." (cited from <a href="http://graphics.cs.uni-sb.de/NMM/index.html" target="_blank">
+				http://graphics.cs.uni-sb.de/NMM/index.html</a>. Go here for details)<br>
+				The CVS archive of the NMM project contains the <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html" target="_blank">
+				Multimedia-Box (MMBox)</a>, an NMM application that can be described as an extensible
+				Home Entertainement System (like freevo for example).
+				We are working on a MMBox-version of jollix. This LiveCD will boot directly into MMBox.
+				Furthermore this LiveCD might be used as a "serverregistry-enabling" CD, i.e.
+				via boot parameter "jollix doserverregistry" the PC acts as the central registry for the
+				middleware instead starting up the MMBox. See <a href="http://graphics.cs.uni-sb.de/NMM/Docs/index.html" target="_blank">
+				documentaion of MMBox</a> for details about this application and the serverregistry.<br><br>
+				<b><i>06.05.03</i></b> - <b>Betatesters wanted!</b> In case you are interested in
+				testing the current beta-release of jollix,
+				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">get in contact with ViVa</a>
+				and get an account in our forum if you want.<br><br>
+				<b><i>06.05.03</i></b> - There are two mailing lists:<br>
+				<b>jollix-user</b> is public for the users to discuss user-related stuff.
+				To subscribe,
+				<a href="https://lists.berlios.de/mailman/listinfo/jollix-user">click here</a>.<br>
+				<b>jollix-developer</b> is the private list of the jollix developers,
+				where Development of jollix is dicussed.
+				To subscribe <a href="https://lists.berlios.de/mailman/listinfo/jollix-developer">jollix-developer</a>
+				you should have an account at
 				<a href="http://developer.berlios.de/account/register.php" target="_blank">berliOS</a>
-				haben und dem jollix-Projekt <a href="http://developer.berlios.de/project/memberlist.php?group_id=666">beitreten</a>.<br><br>
-				<b><i>01.05.03</i></b> - Wegen der Zusammenarbeit mit den Machern von <a href="http://www.public-enemy.de" target="_blank">Public Enemy</a>
-				ist eine neue Release von jollix online. Die <b>jollix Version 0.1.1</b> erlaubt nun, neben Counter-Strike auch
-				eine Festplatten Installation von <a href=" http://www.public-enemy.de " target="_blank">Public Enemy: The Dark Future"</a> (80000 Downloads am ersten Tag!)
-				unter jollix einzurichten und zu spielen. Ausserdem gibt es einige Bugfixes.<br><br>
-				<b><i>19.04.03</i></b> - jollix 0.1-beta (Counterstrike Edition) ist fertig und steht <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">zum Download bereit.</a><br><br>
-				<b><i>25.04.03</i></b> - Die kommende Woche erscheinende Half-Life Modifikation
-				<a href="http://www.public-enemy.de" target="_blank">Public Enemy</a> wird von
-				der jollix 0.1 LiveCD unterstützt. So ist es nun auch möglich, die allerneuste
-				MOD der HL-Szene mit der jollix 0.1 LiveCD zu spielen, ohne Linux auf
-				der Festplatte installieren zu müssen.<br><br>
-				<b><i>13.03.03</i></b> - Die LiveCD bootet mit rudimentärer Hardwareerkennung. Ein Grundsystem (mit X und KDE) läuft.<br><br>
-				<b><i>14.02.03</i></b> - Permanenter irc channel #jollix auf QuakeNet eingerichtet.<br><br>
-				<b><i>11.02.03</i></b> - Projektanmeldung auf <a href="http://developer.berlios.de/" target="_blank">berliOS</a>,
-															 <a href="http://jollix.berlios.de/phpBB2/index.php">Forum freigeschaltet</a> und
-															 erste <a href="screenshots.html">Screenshots.</a><br><br>
-				<b><i>06.02.03</i></b> - Pre-Alpha-Phase. Noch nix da, ausser verbrannte Rohlinge und ein paar Notizen<br>
+				to <a href="http://developer.berlios.de/project/memberlist.php?group_id=666">
+				become a member of the jollix project</a>.<br><br>
+				Older news not translated due to laziness of the author,
+				but have a look at our partner project site
+				<a href="http://www.public-enemy.de" target="_blank">Public Enemy</a>.
+				Public enemy is a great new Half-Life mod.
 			</td>
 			</tr>
 </div>
