*** empty log message ***

--- a/jollix/public_html/en/en_about.html
+++ b/jollix/public_html/en/en_about.html
@@ -42,7 +42,7 @@
 	<hr>
 	<h4>What is jollix?</h4>
 	Jollix ia a LiveCD based on <a href="dokumentation.html#gentoo">Gentoo Linux</a>
-	Jollix boots directly from a CD without touching the hard disk.
+	Jollix boots directly from CD without touching the hard disk.
 	A fast and easy-to-install version of jollix will be available in a later release.
 	In the current version there are installation instructions for more experienced linux users.
 	Once jollix is installed on a hard disk, it can be updated via portage, the packet
