--- a/jollix/public_html/en/en_features.html
+++ b/jollix/public_html/en/en_features.html
@@ -55,7 +55,7 @@
 					<li>ISDN-support</li>
 					<li>Fritz!Card DSL</li>
 					<li>Wine Build 20030911</li>
-					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, ein game-server browser</li>
+					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, game-server browser</li>
 					<li>Cheathing Death</li>
 					<li>Half-Life-, Public-Enemy- or Counter-Strike hard disk installations can
 						be used directly from the LiveCD!</li>
