--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -43,7 +43,7 @@
 	<p>Jollix is a free GNU/Linux distribution. It's a bootable CD (LiveCD).
 		Jollix is designed for games and multimedia purposes; it's basis is
 		the famous <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a>,
-		that is capable of automatic hardware detection an configuration. The LiveCD
+		that is capable of automatic hardware detection and configuration. The LiveCD
 		starts a graphical user interface (XFree + KDE), so the most important and useful
 		applications are available after startup. More information about jollix is
 		<a href="en_about.html">available here</a>.
@@ -57,18 +57,15 @@
 				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">Download here.</a><br>
 				Version 0.2 is the second beta-release of jollix. The most important enhancements
 				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
-				Many internet and multimedia applications are part of the software collection, e.g.
-				Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
-				kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
+				Many internet and multimedia applications are part of the software collection, e.g. kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
 				(TV-application). A detailed overview is
 				<a href="http://www.jollix.de/common/packets.html">available here</a>.
 				Experienced GNU/linux users might try to install jollix on their hard disk.
 				But the installation instructions are in german only so far. This will change soon.
-				We plan to develop a grafical installation program for a later version.
-				Jollix ist optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
+				We plan to develop a graphical installation program for a later version.
+				Jollix is optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
 				from gentoo linux. NVIDIA (TNT- Geforce 5900 FX) and ATI Radeon graphics cards
-				(8500-9800) are supported with full OpenGL 3D acceleration. the size of the ISO-image of
-				the jollix LiveCD is 506MB.
+				(8500-9800) are supported with full OpenGL 3D acceleration. The size of the jollix ISO-image is 506MB.
 				<br><br>
 			</td>
 			<td bgcolor="#DBF4FF" width="200" valign="top" align="center">
