--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -48,14 +48,13 @@
 				Version 0.2 is the second beta-release of jollix. The most important enhancements
 				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
 				Many internet and multimedia applications are part of the software collection, e.g.
-				Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
 				kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
 				(TV-application). A detailed overview is
 				<a href="http://www.jollix.de/common/packets.html">available here</a>.
 				Experienced GNU/linux users might try to install jollix on their hard disk.
 				But the installation instructions are in german only so far. This will change soon.
-				We plan to develop a grafical installation program for a later version.
-				Jollix ist optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
+				We plan to develop a graphical installation program for a later version.
+				Jollix is optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
 				from gentoo linux. NVIDIA (TNT- Geforce 5900 FX) and ATI Radeon graphics cards
 				(8500-9800) are supported with full OpenGL 3D acceleration. the size of the ISO-image of
 				the jollix LiveCD is 506MB.
