--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -49,19 +49,19 @@
 					[22.10.2003] ~500MB (berlios.de)</li>
 				</ul>
 				<b>Download Mirrors:</b><br>
-				vorübergehend deaktiviert<br><br>
-				<!--<ul>
-					<li>Germany:<br>
+				<ul>
+					<!--<li>Germany:<br>
 					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<li>Netherlands:<br>
 					NLUUG: <a href="ftp://ftp.nluug.nl/pub/metalab/distributions/jollix">ftp://ftp.nluug.nl/pub/metalab/distributions/jollix</a><br></li>
 					<li>Poland:<br>
 					Warsaw: <a href="ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix">ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix</a><br></li>
+					-->
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
-				</ul> -->
+				</ul> 
 				<hr><br>
 				<b>Frühere Versionen</b>:<br>
 				<ul>
