*** empty log message ***

--- a/jollix/public_html/de/de_about.html
+++ b/jollix/public_html/de/de_about.html
@@ -59,8 +59,8 @@
 	Sollte nach einer Festplatteninstallation der Funktionsumfang nicht mehr ausreichen,
 	kann das System einfach erweitert werden. D.h. zusätzliche Programmpakete
 	können - wie mit Gentoo Linux - installiert und auch wieder deinstalliert
-	werden. Dafür wird die von den Gentoo entwickelte Paketverwaltung <a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
-	gleich mit installiert. Eine einfache grafische und benutzergeführte Installtion ist derzeit
+	werden. Dafür wird die von Gentoo entwickelte Paketverwaltung <a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
+	gleich mitinstalliert. Eine einfache grafische und benutzergeführte Installation ist derzeit
 	noch nicht möglich. Erfahrenere Leute können jedoch jetzt schon jollix auf der Festplatte installieren, dazu gibt es in der Dokumentation eine <a href="de_docu.html#installation">Anleitung</a>.
 
 	<h4>Was ist jollix nicht?</h4>
