*** empty log message ***

--- a/jollix/public_html/en/en_features.html
+++ b/jollix/public_html/en/en_features.html
@@ -69,8 +69,8 @@
 				</ul>
 				<h4>Planned changes and features for the next versions:</h4>
 				<ul>
-					<li>An <a href="http://www.cs.uni-sb.de/NMM" target="_parent">NMM</a>-version,
-						that starts the <a href="http://www.cs.uni-sb.de/NMMStatus/MMBox/index.html" target="_parent">MMBox-application</a>:
+					<li>An <a href="http://graphics.cs.uni-sb.de/NMM/" target="_parent">NMM</a>-version,
+						that starts the <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html" target="_parent">MMBox-application</a>:
 						Turns your PC into a network-enabled Multimedia Home-Entertainment Center!</li>
 					<li>fast and easy graphical installation</li>
 					</ul>
