--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -54,7 +54,7 @@
 			<td valign="top">
 				<font size="+1"><b>News & Announcements:<b></font><br><br>
 				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
-				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">Download here.</a><br>
+				<a href="en_download.html">Download here.</a><br>
 				Version 0.2 is the second beta-release of jollix. The most important enhancements
 				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
 				Many internet and multimedia applications are part of the software collection, e.g. kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
