--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -88,7 +88,7 @@
 				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
 				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
 				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
-				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
+				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html" target="blank">
 				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
 				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
 				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
