*** empty log message ***

--- a/jollix/public_html/de/de_docu.html
+++ b/jollix/public_html/de/de_docu.html
@@ -215,6 +215,7 @@ IRC: irc://irc.quakenet.org/jollix
 				<hr>
 				<a name="installation"></a>
 				<h3><b><u>Installation</u></b></h3>
+				<p class="chaphead">ACHTUNG! DIE FOLGENDE ANLEITUNG IST NUR F&Uuml;R LEUTE GEDACHT, DIE BEREITS ERFAHRUNG IM UMGANG MIT LINUX HABEN, BEREITS EINE ANDERE LINUX DISTRIBUTION INSTALLIERT HABEN, DAHER GRUNDKENNTNISSE HABEN UND NICHT VOLLKOMMEN NEU IN LINUX EINSTEIGEN. F&Uuml;R ALLE UMSTEIGER IST JOLLIX IN DER VERSION 0.2 ALS LIVECD ZUM TESTEN UND KENNENLERNEN VON LINUX GEDACHT. EIN GRAFISCHES INSTALLATIONSPROGRAMM ZUR EINFACHEN INSTALLATION VON JOLLIX KOMMT SP&Auml;TER!</p>
 				<p class="dochead">jollix Linux Installationsanleitung</p>
 				<p class="chaphead">Wichtige Anmerkungen:</p>
 				<p>Die Installation von jollix auf der Festplatte erfolgt auf eigene Gefahr!
