*** empty log message ***

--- a/jollix/public_html/en/en_download.html
+++ b/jollix/public_html/en/en_download.html
@@ -45,14 +45,25 @@
 			<td valign="top">
 				<b>Latest version:</b><br>
 				<ul>
-					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a>
-					[22.10.2003] ~500MB (berlios.de)</li>
+					<li>jollix 0.2 [22.10.2003] ~500MB
+					<br>Please select a download mirror!</li>
 				</ul>
+
+				<!--
+				<ul>
+					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003] ~500MB (berlios.de)
+					<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
+				</ul>
+				-->
+
 				<b>Download Mirrors:</b><br>
-				available soon
-				 <ul>
-				<!--	<li>Germany:<br>
-					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
+				<ul>
+					<li>Germany:<br>
+					<!--
+					Berlin: <br>
+					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
+					-->
+					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/0.2/</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<li>Netherlands:<br>
 					NLUUG: <a href="ftp://ftp.nluug.nl/pub/metalab/distributions/jollix">ftp://ftp.nluug.nl/pub/metalab/distributions/jollix</a><br></li>
@@ -60,7 +71,6 @@
 					Warsaw: <a href="ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix">ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix</a><br></li>
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
-					-->
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
 				</ul>
 				<hr><br>
