--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -44,10 +44,19 @@
 		<tr>
 			<td valign="top">
 				<b>Aktuelle Version:</b><br>
+
+				<ul>
+					<li>jollix 0.2 [22.10.2003] ~500MB
+					<br>Bitte einen Mirror benutzen!</li>
+				</ul>
+
+				<!--
 				<ul>
 					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003] ~500MB (berlios.de)
 					<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
 				</ul>
+				-->
+				
 				<b>Download Mirrors:</b><br>
 				<ul>
 					<li>Germany:<br>
