*** empty log message ***

--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -44,26 +44,25 @@
 		<tr>
 			<td valign="top">
 				<b>Aktuelle Version:</b><br>
-
 				<ul>
-					<li>jollix 0.2 [22.10.2003] ~500MB
-					<br>Bitte einen Mirror benutzen!</li>
+					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2.1</a> [26.10.2003] ~500MB (berlios.de)
+
+
+
+				<!--	<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!
+                                -->
+
+				</li>
 				</ul>
 
 				<!--
-				<ul>
-					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003] ~500MB (berlios.de)
-					<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
-				</ul>
-				-->
-				
+
 				<b>Download Mirrors:</b><br>
 				<ul>
 					<li>Germany:<br>
-					<!--
 					Berlin: <br>
 					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
-					-->
+
 					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/0.2/</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<li>Netherlands:<br>
@@ -73,16 +72,20 @@
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
+				-->
 				</ul>
 				<hr><br>
 				<b>Frühere Versionen</b>:<br>
 				<ul>
+				        <li>jollix 0.2 [22.10.2003]<br>
+						Zweite Release<br>
+						Downloads der [0.2] bei berlios.de bis 26.10.2003: 5290 </li>
 					<li>jollix 0.1.1 [30.04.2003]<br>
 						Zweite verbesserte Release, CS/PE - Edition<br>
-						Downloads der [0.1.1] bis 22.10.2003: 7874 </li>
+						Downloads der [0.1.1] bei berlios.de bis 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
 						Erste Release, CS - Edition<br>
-						Downloads der [0.1] bis 30.04.2003: 429 </li>
+						Downloads der [0.1] bei berlios.de bis 30.04.2003: 429 </li>
 				</ul>
 		 	</td>
 		</tr>
