--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -53,6 +53,19 @@
 		<tr>
 			<td valign="top">
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
+				<b><i>26.10.03</i></b> - <b>Jollix 0.2.1 Bugfix Release</b>
+				<a href="de_download.html">Download hier!</a><br>
+				<ul>
+				<li>Probleme mit DNS Servern beseitigt</li>
+				<li>Neues ISDN Setup Programm</li>
+				<li>Bootoption zum Deaktivieren des Bootsplash-Logos</li>
+				<li>Fehler in der Mauserkennung beim Booten mit der Option
+				"atigamer" behoben</li>
+				<li>Vesa failsafe Modus als Option im Bootmen&uuml; hinzugef&uuml;gt. Aktivierung: Booten mit "jollix vesa".<br>Diese Option verwenden, wenn jollix beim Booten in die grafische Oberfläche Probleme macht.</li>
+				</ul>
+				Anmerkung:<br>
+				Die Bootoption "atigamer" gilt nur für Besitzer von ATI Grafikkarten und nur dann, wenn man mit jollix Half-Life bzw. Half-Life MODS spielen möchte. Alle anderen unter Linux verfügbaren Spiele können mit ATI Karten ohne die Option "atigamer" mit jollix gestartet werden. Die Bootoption "atigamer" ist nur ein Workaround für ATI Karten in Verbindung mit wine zum Spielen von Half-Life und HL-MODs.<br>Das KDE Konfigurationsprogramm kxconfig, das sich im Kontrollzentrum des KDE befindet, kann zum Einstellen des Bildschirms und der Auflösung benutzt werden. Dieses Programms nicht zur Konfiguration der Grafikkarte verwenden! Die Erkennung der Grafikkarte wird beim Booten von jollix automatisch durchgeführt. Informationen zur eigenen Grafikkarte liefert das Programm "glxinfo" (in einer Konsole eingeben) und die 3D Animation "glxgears".
+				<br><br>
 				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und
 				<a href="de_download.html">kann hier heruntergeladen werden.</a><br>
 				Die Version 0.2 ist die zweite Beta-Release von jollix. Die wichtigsten Erweiterungen gegenüber
