--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -53,6 +53,9 @@
 		<tr>
 			<td valign="top">
 				<font size="+1"><b>News & Announcements:<b></font><br><br>
+								<b><i>26.10.03</i></b> - <b>Jollix 0.2.1 [Bugfix Release] available.</b><br>
+				<a href="en_download.html">Download here.</a>
+				<br><br>
 				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
 				<a href="en_download.html">Download here.</a><br>
 				Version 0.2 is the second beta-release of jollix. The most important enhancements
