--- a/jollix/public_html/en/en_download.html
+++ b/jollix/public_html/en/en_download.html
@@ -44,25 +44,21 @@
 		<tr>
 			<td valign="top">
 				<b>Latest version:</b><br>
-				<ul>
-					<li>jollix 0.2 [22.10.2003] ~500MB
-					<br>Please select a download mirror!</li>
-				</ul>
 
-				<!--
 				<ul>
-					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003] ~500MB (berlios.de)
-					<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
+					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2.1</a> [26.10.2003] ~500MB (berlios.de)
+					<!--<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
 				</ul>
 				-->
 
+				<!--
 				<b>Download Mirrors:</b><br>
 				<ul>
 					<li>Germany:<br>
-					<!--
+
 					Berlin: <br>
 					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
-					-->
+
 					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/0.2/</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<li>Netherlands:<br>
@@ -73,15 +69,21 @@
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
 				</ul>
+
+				-->
+
 				<hr><br>
 				<b>Older versions</b>:<br>
 				<ul>
+				        <li>jollix 0.2 [22.10.2003]<br>
+						Second release<br>
+						Downloads of [0.2] at berlios.de until 26.10.2003: 5290 </li>
 					<li>jollix 0.1.1 [30.04.2003]<br>
 						Second improved release, CS/PE - Edition<br>
-						Downloads of [0.1.1] until 22.10.2003: 7874 </li>
+						Downloads of [0.1.1] at berlios.de until 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
 						First release, CS - Edition<br>
-						Downloads of [0.1] until 30.04.2003: 429 </li>
+						Downloads of [0.1] at berlios.de until 30.04.2003: 429 </li>
 				</ul>
 		 	</td>
 		</tr>
