--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -63,7 +63,7 @@
 					Berlin: <br>
 					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
 
-					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/0.2/</a><br>
+					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<li>Netherlands:<br>
 					NLUUG: <a href="ftp://ftp.nluug.nl/pub/metalab/distributions/jollix">ftp://ftp.nluug.nl/pub/metalab/distributions/jollix</a><br></li>
